--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+axum = "0.6.20"
+mongodb = "2.6.1"
+serde = { version = "1.0.183", features = ["derive"] }
+tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "rt"] }
